--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <a id="link" href="https://sharkcores2023.github.io/scriptcore-ToS/">
             <button id="btn">ToS</button>
         </a>
-        <a id="link" href="">
+        <a id="link" href="https://sharkcores2023.github.io/scriptcore-Changes/">
             <button id="btn">Changes</button>
         </a>
         <a id="link" target="_blank" href="https://www.youtube.com/channel/UCck_7Hc2i2TjzoQjGbf6e0Q">
